@@ -1,6 +1,7 @@
 v0.64
 ----------------------
 - Added the option to make series spoiler free, by adding dummy videos to the list.
+- Also added the option hide player names and races in events, e.g., for group stages.
 - Fixed Twitch.
 
 v0.63
